Imagem trocada. sections ajustadas em tamando. fade na imagem da seção 1. bold nos títulos.

--- a/html/contato.html
+++ b/html/contato.html
@@ -13,7 +13,7 @@
 			<img src="eu.jpg">
 			<ul>
 				<li><a href="/home/maro/Documents/Meu curriculo/html/index.html">home</a></li>
-				<li><a href="storyline.html">Linha do Tempo</a></li>
+				<li><a href="/home/maro/Documents/Meu curriculo/html/storyline.html">Linha do Tempo</a></li>
 				<li><a href="/home/maro/Documents/Meu curriculo/html/contato.html">contato</a></li>
 			</ul>
 		</nav>
