--- a/html/index.html
+++ b/html/index.html
@@ -24,13 +24,15 @@
 		<section class="mencoes">
 			<div class="mencoes-box">
 				<img src="/home/maro/Documents/Meu curriculo/images/meusucesso.jpeg">
-				<p>"Nada é facil, tudo é possível.</p>
-				<p>Comece pequeno e sonhe grande!"</p>
+				<div class="mencoes-phrase">
+					<p>"Nada é facil, tudo é possível.</p>
+					<p>Comece pequeno e sonhe grande!"</p>
+				</div>
 			</div>
 		</section>
 	<section class="sobre-mim">
-		<div>
-			<h2>Sobre mim</h2>
+		<div class="sobre-mim-box">
+			<h2><strong>Sobre mim</strong></h2>
 				<p>Em constante aprendizado!</p>
 		</div>
 	</section>
