Tabela criada em Contato, Fonte do site alterada.

--- a/html/contato.html
+++ b/html/contato.html
@@ -6,11 +6,14 @@
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/reset.css">
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/style.css">
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/contato.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200&display=swap" rel="stylesheet">  
 </head>
 <body>
 	<header>
 		<nav class="cabecalho">
-			<img src="eu.jpg">
+			<img src="/home/maro/Documents/Meu curriculo/images/eu.jpg">
 			<ul>
 				<li><a href="/home/maro/Documents/Meu curriculo/html/index.html">home</a></li>
 				<li><a href="/home/maro/Documents/Meu curriculo/html/storyline.html">Linha do Tempo</a></li>
@@ -24,11 +27,68 @@
 					<h2>Telefone: (37) 99808-6071</h2>
 					<h2>E-mail: mauriciof2408@gmail.com</h2>
 					<h2>Endereço: Rua Tiradentes - 181 - Centro / Pimenta - MG</h2>
-					<table>
-						<th>
-							<tr>Horários para entrar em contato comigo</tr>
-							<tr>dia</tr>
-						</th>
+					<table class="tabela">
+						<thead>
+							<tr>
+								<th colspan="2">Horários para contato</th>
+							</tr>
+							<tr>
+								<th>dia</th>
+								<th>horário</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="dia" rowspan="2">Segunda-Feira</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Terça-Feira</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Quarta-Feira</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Quinta-Feira</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Sexta-Feira</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Sábado</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+							<tr>
+								<td class="dia" rowspan="2">Domingo</td>
+								<td class="horario">11:30 - 13:00</td>
+							</tr>
+							<tr>
+								<td class="horario">18:00 - 22:00</td>
+							</tr>
+						</tbody>
 					</table>
 			</div>
 		</section>
