--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/reset.css">
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/style.css">
 	<link rel="stylesheet" href="/home/maro/Documents/Meu curriculo/Css/home.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200&display=swap" rel="stylesheet">  
 </head>
 
 <body>
