Adicionado bordas na HOME testanto colocar som no site

--- a/html/contato.html
+++ b/html/contato.html
@@ -15,9 +15,12 @@
 		<nav class="cabecalho">
 			<img src="/home/maro/Documents/Meu curriculo/images/eu.jpg">
 			<ul>
-				<li><a href="/home/maro/Documents/Meu curriculo/html/index.html">home</a></li>
-				<li><a href="/home/maro/Documents/Meu curriculo/html/storyline.html">Linha do Tempo</a></li>
-				<li><a href="/home/maro/Documents/Meu curriculo/html/contato.html">contato</a></li>
+				<li class="cabecalho-botoes"><a href="/home/maro/Documents/Meu curriculo/html/index.html">home</a></li>
+				<li class="cabecalho-botoes"><a href="/home/maro/Documents/Meu curriculo/html/storyline.html">Linha do Tempo</a></li>
+				<li class="cabecalho-botoes contact"><a href="/home/maro/Documents/Meu curriculo/html/contato.html">contato</a></li>
+				
+				<button class="teste">TESTE</button>
+				<audio id="dbz" src="/home/maro/Documents/Meu curriculo/sounds/dbz3.mp3"></audio>
 			</ul>
 		</nav>
 	</header>
@@ -134,5 +137,6 @@
 	<footer>
 		<p class="copyright">&copy; Copyright Maurício Franklin Rodrigues de Olveira - 2022</p>
 	</footer>
+	<script src="/home/maro/Documents/Meu curriculo/Js/main.js"></script>
 </body>
 </html>
