--- a/html/contato.html
+++ b/html/contato.html
@@ -33,14 +33,14 @@
 					<table class="tabela">
 						<thead>
 							<tr>
-								<th colspan="2">Horários para contato</th>
+								<th class="tabela-botao" colspan="2">Horários de maior disponibilidade</th>
 							</tr>
-							<tr>
+							<tr class="searchHide hide">
 								<th>dia</th>
 								<th>horário</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody class="searchHide hide">
 							<tr>
 								<td class="dia" rowspan="2">Segunda-Feira</td>
 								<td class="horario">11:30 - 13:00</td>
